--- a/00_First Method/02_svm_model.ipynb
+++ b/00_First Method/02_svm_model.ipynb
@@ -193,12 +193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.to_pickle(\"A01_behavioral_dataset.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
