Lexicon check code added

--- a/Current/SECOND_TRIAL/01_TRAINING-Copy1.ipynb
+++ b/Current/SECOND_TRIAL/01_TRAINING-Copy1.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"SECOND_TRIAL/00_Dataset_Related/STARTER_DATASET.pkl\")"
+    "df = pd.read_pickle(\"./00_Dataset_Related/STARTER_DATASET.pkl\")"
    ]
   },
   {
@@ -174,18 +174,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-5-50c449834fe5>:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  df['cleaned_text'] = df['cleaned_text'].str.replace(r'(@[A-Za-z0-9]+)|([^0-9A-Za-z \\t])|(\\w+:\\/\\/\\S+)|rt|\\d+', '')\n",
-      "<ipython-input-5-50c449834fe5>:5: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  df['cleaned_text'] = df['cleaned_text'].str.replace(r'^\\s+|\\s+$', '')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = clean_text(df, \"narrative\")"
    ]
@@ -338,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,16 +493,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.9/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n",
+      "/usr/local/lib/python3.8/site-packages/tqdm/std.py:670: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "  from pandas import Panel\n"
+     ]
+    }
+   ],
    "source": [
-    "%run '../Current/SECOND_TRIAL/Utils/COMBINED.ipynb'"
+    "%run './Utils/COMBINED.ipynb'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,44 +540,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-18-a39db696c0ed>:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  train[\"behavior\"] = train.apply(lambda x: get_behaviors_string(x.cleaned_text), axis=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train[\"behavior\"] = train.apply(lambda x: get_behaviors_string(x.cleaned_text), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-19-148a4c17f30f>:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test[\"behavior\"] = test.apply(lambda x: get_behaviors_string(x.cleaned_text), axis=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test[\"behavior\"] = test.apply(lambda x: get_behaviors_string(x.cleaned_text), axis=1)"
    ]
@@ -813,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
